# Ndi-2026

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-dev.yml  deploy.yml
backend/: Dockerfile  app.py  check_models.py  docker-compose.yml  pyproject.toml  requirements.txt
public/: 404.html  405.html
src/: App.vue
src/assets/: main.css
src/components/: ChatBot.vue  ContactPage.vue  FrustratingForm.vue  GameAssembly.vue  GameMiner.vue  GameRecycling.vue  GameTransport.vue  GameUsage.vue  LaserGame.vue  LaserOverlay.vue  LinuxDesktop.vue  NavBar.vue  Overlays.vue  Sobriete.vue  TuxAnimation.vue  WindowsLogin.vue
src/components/lasergame/: LaserPuzzleGame.vue  LaserQuizGame.vue  LaserSurvivalGame.vue
src/components/trailer/: FadeText.vue
src/router/: index.ts
src/views/: ChapterPage.vue  ContactView.vue  HomeView.vue  LaserGameView.vue  LaserQuizView.vue  LasergameMenuView.vue  LasergamePuzzleView.vue  LasergameQuizView.vue  LasergameSurvivalView.vue  PhoneGameView.vue  Portfolio.vue  PortfolioView.vue  SobrieteView.vue  TrailerPage.vue
